# bmstu_src

./: README.md
auth/: .gitignore  CMakeLists.txt  config.json  main.cpp
auth/app/: main.cpp
auth/controllers/: AdminController.cpp  AdminController.h  AuthController.cpp  AuthController.h  GroupController.cpp  GroupController.h  PermissionController.cpp  PermissionController.h  RoleController.cpp  RoleController.h
auth/filters/: JwtAuthFilter.cpp  JwtAuthFilter.h
auth/include/: controller.h  service.h  user_db.h
auth/repository/: DB.cpp  DB.h  UsersRepo.cpp  UsersRepo.h
auth/services/: AccessControlService.cpp  AccessControlService.h  AuthService.cpp  AuthService.h  GroupService.cpp  GroupService.h  RoleService.cpp  RoleService.h
auth/src/: controller.cpp  jwt_utils.cpp  service.cpp  user_db.cpp
auth/utils/: JWT.cpp  JWT.h
fileservice/: .gitignore  CMakeLists.txt  config.json  main.cc
fileservice/controllers/: AdminController.cpp  AdminController.h  FavoritesController.cpp  FavoritesController.h  FileController.cc  FileController.h  GroupController.cpp  GroupController.h  RoleController.cpp  RoleController.h
fileservice/filters/: JwtAuthFilter.cc  JwtAuthFilter.h  PermissionFilter.cc  PermissionFilter.cpp  PermissionFilter.h
fileservice/pkg/: db.cc  db.h  jwt_utils.cpp  jwt_utils.h  permission_utils.cpp  permission_utils.h  validation.h
fileservice/services/: AccessControlService.cpp  AccessControlService.h  AdminService.cpp  AdminService.h  FileService.cc  FileService.h  GroupService.cpp  GroupService.h  RoleService.cpp  RoleService.h
fileservice/test/: CMakeLists.txt
frontend/: .gitignore  astro.config.mjs  package-lock.json  package.json
frontend/public/: global.css  index.html
frontend/src/: App.svelte
frontend/src/components/: Admin.svelte  AdminDashboard.svelte  FileTree.svelte  Home.svelte  Login.svelte  Settings.svelte  Signup.svelte
frontend/src/layouts/: BaseLayout.astro
frontend/src/lib/: api.js  localization.js  stores.js  utils.js
frontend/src/pages/: admin-dashboard.astro  admin.astro  index.astro  login.astro  settings.astro  signup.astro
scripts/: cloud_cost_calculator.xlsx  map.py  new.py
